whattheduck: Hopefully prevent full-screen rendering on iOS once the camera view is shown

--- a/apps/whattheduck/src/theme/global.scss
+++ b/apps/whattheduck/src/theme/global.scss
@@ -171,7 +171,7 @@ ion-app.camera-preview-active .ion-page,
 ion-app.camera-preview-active .ion-content::part(scroll),
 ion-app.camera-preview-active ion-split-pane,
 #camera-preview-container {
-  --ion-background-color: transparent !important;
+  // --ion-background-color: transparent !important;
   --background: transparent !important;
   background: transparent !important;
   background-color: transparent !important;
